--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "harp-styled-semantic-sink",
   "version": "0.0.0",
-  "description": "",
+  "description": "I want to Surge this motherfucker",
   "dependencies": {
     "surge": "^0.21.3"
   },
