--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "I want to Surge this motherfucker",
   "dependencies": {
+    "harp": "^0.30.1",
     "surge": "^0.21.3"
   },
   "devDependencies": {
